--- a/Data.Database/Data.Database.csproj
+++ b/Data.Database/Data.Database.csproj
@@ -51,6 +51,7 @@
     <Compile Include="CursosAdapter.cs" />
     <Compile Include="MateriaAdapter.cs" />
     <Compile Include="ModuloAdapter.cs" />
+    <Compile Include="PersonaAdapter.cs" />
     <Compile Include="PlanesAdapter.cs" />
     <Compile Include="UsuarioAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
