--- a/Business.Logic/Business.Logic.csproj
+++ b/Business.Logic/Business.Logic.csproj
@@ -41,7 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Alumnos_InscripcionesLogic.cs" />
     <Compile Include="BusinessLogic.cs" />
+    <Compile Include="ComisionLogic.cs" />
+    <Compile Include="CursoLogic.cs" />
+    <Compile Include="Docente_CursoLogic.cs" />
+    <Compile Include="EspecialidadLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioLogic.cs" />
   </ItemGroup>
