--- a/UI.Desktop/UI.Desktop.csproj
+++ b/UI.Desktop/UI.Desktop.csproj
@@ -46,26 +46,49 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Alumnos_InscripcionesDesktop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Alumnos_InscripcionesDesktop.Designer.cs">
+      <DependentUpon>Alumnos_InscripcionesDesktop.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Alumnos_InscripcionesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Alumnos_InscripcionesForm.Designer.cs">
+      <DependentUpon>Alumnos_InscripcionesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ApplicationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ApplicationForm.Designer.cs">
+      <DependentUpon>ApplicationForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UsuariosDesktop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UsuariosDesktop.Designer.cs">
+      <DependentUpon>UsuariosDesktop.cs</DependentUpon>
+    </Compile>
     <Compile Include="UsuariosForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UsuariosForm.Designer.cs">
       <DependentUpon>UsuariosForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="formListaUsuarios.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="formListaUsuarios.Designer.cs">
-      <DependentUpon>formListaUsuarios.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Usuarios.cs" />
+    <EmbeddedResource Include="Alumnos_InscripcionesDesktop.resx">
+      <DependentUpon>Alumnos_InscripcionesDesktop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Alumnos_InscripcionesForm.resx">
+      <DependentUpon>Alumnos_InscripcionesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UsuariosDesktop.resx">
+      <DependentUpon>UsuariosDesktop.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UsuariosForm.resx">
       <DependentUpon>UsuariosForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="formListaUsuarios.resx">
-      <DependentUpon>formListaUsuarios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
