--- a/UI.Desktop/UI.Desktop.csproj
+++ b/UI.Desktop/UI.Desktop.csproj
@@ -64,6 +64,18 @@
     <Compile Include="ApplicationForm.Designer.cs">
       <DependentUpon>ApplicationForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MateriaDesktop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MateriaDesktop.Designer.cs">
+      <DependentUpon>MateriaDesktop.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MateriaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MateriaForm.Designer.cs">
+      <DependentUpon>MateriaForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UsuariosDesktop.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +95,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Alumnos_InscripcionesForm.resx">
       <DependentUpon>Alumnos_InscripcionesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MateriaDesktop.resx">
+      <DependentUpon>MateriaDesktop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MateriaForm.resx">
+      <DependentUpon>MateriaForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UsuariosDesktop.resx">
       <DependentUpon>UsuariosDesktop.cs</DependentUpon>
