--- a/UI.Desktop/UI.Desktop.csproj
+++ b/UI.Desktop/UI.Desktop.csproj
@@ -64,6 +64,42 @@
     <Compile Include="ApplicationForm.Designer.cs">
       <DependentUpon>ApplicationForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ComisionesDesktop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ComisionesDesktop.Designer.cs">
+      <DependentUpon>ComisionesDesktop.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ComisionesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ComisionesForm.Designer.cs">
+      <DependentUpon>ComisionesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CursosDesktop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CursosDesktop.Designer.cs">
+      <DependentUpon>CursosDesktop.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CursosForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CursosForm.Designer.cs">
+      <DependentUpon>CursosForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Docentes_CursosDesktop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Docentes_CursosDesktop.Designer.cs">
+      <DependentUpon>Docentes_CursosDesktop.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Docentes_CursosForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Docentes_CursosForm.Designer.cs">
+      <DependentUpon>Docentes_CursosForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UsuariosDesktop.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +119,24 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Alumnos_InscripcionesForm.resx">
       <DependentUpon>Alumnos_InscripcionesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ComisionesDesktop.resx">
+      <DependentUpon>ComisionesDesktop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ComisionesForm.resx">
+      <DependentUpon>ComisionesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CursosDesktop.resx">
+      <DependentUpon>CursosDesktop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CursosForm.resx">
+      <DependentUpon>CursosForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Docentes_CursosDesktop.resx">
+      <DependentUpon>Docentes_CursosDesktop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Docentes_CursosForm.resx">
+      <DependentUpon>Docentes_CursosForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UsuariosDesktop.resx">
       <DependentUpon>UsuariosDesktop.cs</DependentUpon>
