--- a/UI.Desktop/UI.Desktop.csproj
+++ b/UI.Desktop/UI.Desktop.csproj
@@ -100,6 +100,12 @@
     <Compile Include="Docentes_CursosForm.Designer.cs">
       <DependentUpon>Docentes_CursosForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPrincipal.Designer.cs">
+      <DependentUpon>FormPrincipal.cs</DependentUpon>
+    </Compile>
     <Compile Include="MateriaDesktop.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +117,18 @@
     </Compile>
     <Compile Include="MateriaForm.Designer.cs">
       <DependentUpon>MateriaForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PersonaDesktop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PersonaDesktop.Designer.cs">
+      <DependentUpon>PersonaDesktop.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PersonaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PersonaForm.Designer.cs">
+      <DependentUpon>PersonaForm.cs</DependentUpon>
     </Compile>
     <Compile Include="PlanDesktop.cs">
       <SubType>Form</SubType>
@@ -162,11 +180,20 @@
     <EmbeddedResource Include="Docentes_CursosForm.resx">
       <DependentUpon>Docentes_CursosForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormPrincipal.resx">
+      <DependentUpon>FormPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MateriaDesktop.resx">
       <DependentUpon>MateriaDesktop.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MateriaForm.resx">
       <DependentUpon>MateriaForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PersonaDesktop.resx">
+      <DependentUpon>PersonaDesktop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PersonaForm.resx">
+      <DependentUpon>PersonaForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PlanDesktop.resx">
       <DependentUpon>PlanDesktop.cs</DependentUpon>
