--- a/UI.Desktop/App.config
+++ b/UI.Desktop/App.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-	<connectionStrings>
-		<add name="ConnStringExpress"
-		providerName="System.Data.SqlClient"
-		connectionString="Server=.\SQLEXPRESS;Database=Academia; Integrated Security=true;"/>
-		</connectionStrings>
+	<configSections>
+ </configSections>
+ <connectionStrings>
+  <add name="ConnStringExpress" connectionString="Server=.\SQLEXPRESS;Database=Academia; Integrated Security=true;"
+   providerName="System.Data.SqlClient" />
+  <add name="UI.Desktop.Properties.Settings.AcademiaConnectionString"
+   connectionString="Data Source=DESKTOP-L2605MV\SQLEXPRESS;Initial Catalog=Academia;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 	</configuration>
